# swagger.yaml
@@ -85,6 +85,102 @@ components:
         cost:
           type: number
 
+    BookingComplete:
+      type: object
+      properties:
+        __v:
+          type: number
+        _id:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        user:
+          type: string
+        socket:
+          type: string
+        status:
+          type: string
+          enum: [Upcoming, Ongoing, Completed, Cancelled]
+        unitsConsumed:
+          type: number
+        cost:
+          type: number
+        chargeStartTime:
+          type: string
+          formate: date-time
+        chargeEndTime:
+          type: string
+          formate: date-time
+        durationOfCharge:
+          type: number
+
+    BookingWithAddress:
+      type: object
+      properties:
+        __v:
+          type: number
+        _id:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        user:
+          type: string
+        socket:
+          type: object
+          properties:
+            _id:
+              type: string
+            address:
+              type: string
+        status:
+          type: string
+          enum: [Upcoming, Ongoing, Completed, Cancelled]
+        unitsConsumed:
+          type: number
+        cost:
+          type: number
+
+    BookingWithLocationAndAddress:
+      type: object
+      properties:
+        __v:
+          type: number
+        _id:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        user:
+          type: string
+        socket:
+          type: object
+          properties:
+            _id:
+              type: string
+            address:
+              type: string
+            location:
+              type: object
+              properties:
+                type:
+                  type: string
+                coordinates:
+                  type: array
+                  items:
+                    type: number
+            plugType:
+              type: string
+              enum: [Type-A, Type-C]
+        status:
+          type: string
+          enum: [Upcoming, Ongoing, Completed, Cancelled]
+        unitsConsumed:
+          type: number
+        cost:
+          type: number
+
   responses:
     UnauthorizedError:
       description: Access token is missing or invalid
@@ -580,7 +676,7 @@ paths:
                       type: object
                       properties:
                         booking:
-                          $ref: "#/components/schemas/Booking"
+                          $ref: "#/components/schemas/BookingWithAddress"
         400:
           description: Token Invalid
         401:
@@ -615,7 +711,7 @@ paths:
                   success:
                     type: boolean
                   booking:
-                    $ref: "#/components/schemas/Booking"
+                    $ref: "#/components/schemas/BookingWithLocationAndAddress"
         400:
           description: Token Invalid
         401:
@@ -706,7 +802,7 @@ paths:
                   success:
                     type: boolean
                   booking:
-                    $ref: "#/components/schemas/Booking"
+                    $ref: "#/components/schemas/BookingComplete"
         400:
           description: Token Invalid
         401:
